Add persistent vessel riding mode
